[workspace]
members = [
    "Week2/conditionals",
    "Week2/control_flow",
    "Week2/lab_if_let",
    "Week2/lab_lps_and_ctrl_flw",
    "Week2/loops/break-and-continue",
    "Week2/loops/for-loop",
    "Week2/loops/loop-control",
    "Week2/loops/loops",
    "Week2/loops/while-loops/user-input",
    "Week2/loops/while-loops/while-loops",
    "Week2/match-control",
    "Week2/ms_lab/compound",
    "Week2/ms_lab/hashmaps",
    "Week2/ms_lab/hashmaps_exercise",
    "Week2/ms_lab/if_else",
    "Week2/ms_lab/loops_exercise",
    "Week2/ms_lab/enums",
    "Week2/ms_lab/fns",
    "Week2/ms_lab/lifetimes",
    "Week2/mutable",
    "Week2/shadowing",
    "Week2/split_string",
    "Week2/variables",
    "Week2/arguments",
    "Week2/own_vec",
    "Week2/panic",
    "Week2/error_handling",
    "Week2/lab_fns",
    "Week2/file-reader-appl",
    "Week3/struct_example",
    "Week3/impl_fns",
    "Week3/constructors",
    "Week3/stringAndStr",
    "Week3/string_manipulation",
    "Week3/vectors",
    "Week3/retrieve_from_vector",
    "Week3/string_add",
    "Week3/enum",
    "Week3/enum_as_type",
]
